--- a/src/ui-preferences/styles/index.css
+++ b/src/ui-preferences/styles/index.css
@@ -6,6 +6,7 @@
   --small-border-radius: 12px;
   --background-color: #ebf2fa;
   --common-margin: 5px;
+  --page-margin: 10px;
 }
 
 body {
